<resources>
    //ressource de la page d'acceuil
    <string name="bienvenue">Bienvenue sur IRCore</string>
    <string name="contenu">Cette application vous permet de vous aider à vous orienter au sein de l ENSISA.</string>
    <string name="click">Pour accéder à cela  cliquez sur le menu en haut a gauche pour selectionner l action à faire </string>

    // ressource du menu
    <string name="app_name">IRCore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> IRCore</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Réglages</string>

    <string name="menu_qrcode">Scanner un QRCode</string>
    <string name="menu_salle">Reconnaitre une salle</string>
    <string name="menu_video">Augmenter les affiches</string>
    <string name="menu_guidage">S\'orienter dans l\'école</string>
    <string name="menu_toilet">Urgence Toilette</string>
    <string name="menu_visite">Afficher les personnages</string>
    <string name="menu_quit">Quitter</string>

    //Ressources du lecteur de texte
    <string name="txt_message">Recherche de texte...</string>

    <string name="zone">%1$d</string>

    <string name="title_activity_maps">Map</string>
    <string-array name="salles_array">
        <item>Grand amphi</item>
        <item>Petit amphi</item>
        <item>Kfet</item>
        <item>Amicale</item>
        <item>Xid</item>
        <item>Electro 1.16</item>
        <item>Physique 1.15</item>
        <item>Systeme</item>
        <item>Mbot</item>
        <item>Accueil</item>
        <item>PC1</item>
        <item>PC2</item>
        <item>PC3</item>
        <item>PC4</item>
        <item>PC Master</item>
        <item>TP informatique industrielle</item>
        <item>Scolarité</item>
        <item>E 20A</item>
        <item>E 20B</item>
        <item>E 21</item>
        <item>E 22</item>
        <item>E 23</item>
        <item>E 24</item>
        <item>E 25</item>
        <item>Prof 1, Etage 2</item>
        <item>Prof 2, Etage 2</item>
        <item>E 30</item>
        <item>E 31</item>
        <item>E 32</item>
        <item>E 33</item>
        <item>E 34</item>
        <item>E 35</item>
        <item>E 36</item>
        <item>E 37</item>
        <item>Salle Réseau</item>
        <item>Prof 1, Etage 3</item>
        <item>Prof 2, Etage 3</item>
    </string-array>
</resources>
