<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@drawable/qrcode"
            android:title="@string/menu_qrcode" />
        <item
            android:id="@+id/nav_salle"
            android:icon="@drawable/salle"
            android:title="@string/menu_salle" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/liste"
            android:title="@string/menu_video" />

        <item
            android:id="@+id/nav_guidage"
            android:icon="@drawable/arbis"
            android:title="@string/menu_guidage" />
        <item
            android:id="@+id/nav_toilet"
            android:icon="@drawable/toilette"
            android:title="@string/menu_toilet" />

        <item
            android:id="@+id/nav_visite"
            android:icon="@drawable/objet"
            android:title="@string/menu_visite" />

        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/quitter"
            android:title="@string/menu_quit" />
    </group>



</menu>
